Fixed horizontal scrolling

--- a/css/global.css
+++ b/css/global.css
@@ -108,6 +108,7 @@ a,  a:visited {
  
 .navWrap {
 	height: 49px;
+	overflow: hidden;
 }
  
 .navInner {
